--- a/css/stylo-signup.css
+++ b/css/stylo-signup.css
@@ -1,10 +1,5 @@
 .conteiner-signup {
-  /* border: 1px solid black; */
-  /* background: red;
-  width: 400px;
   margin: auto;
-  border-radius: 7px; */
-  /* transform: translateY(-25px); */
 }
 
 #error-email {
@@ -36,4 +31,8 @@
 
 .radio-butoms {
   display: flex;
+}
+
+.conteiner-signup.hidde{
+  display: none;
 }
