--- a/css/stylo-dm.css
+++ b/css/stylo-dm.css
@@ -9,13 +9,12 @@
   text-align: center;
 }
 
-
-.icon-dm{
+.icon-dm {
   text-decoration: none;
   color: #333;
 }
 
-.icon-dm-box{
+.icon-dm-box {
   width: 40px;
   height: 40px;
   margin: 0 0 0 auto; /* X,Y */
@@ -24,11 +23,9 @@
   /* border: 1px solid red; */
 }
 
-.icon-dm:hover{
+.icon-dm:hover {
   color: #333;
 }
-
-
 
 .dm-letter {
   height: 390px;
@@ -86,7 +83,6 @@
 .message-box-mine p {
   color: rgb(0, 0, 0);
 }
-
 
 /* signup form css code */
 
@@ -390,7 +386,7 @@ form .name-details .field:last-child {
   /* border: 1px solid red; */
 }
 
-.letter-comver{
+.letter-comver {
   text-align: center;
 }
 
@@ -445,24 +441,88 @@ form .name-details .field:last-child {
   height: 370px;
 }
 
-.color-secrete{
+.color-secrete {
   background-color: black;
+}
+
+.time_date{
+  color: rgb(92, 92, 92);
+  font-size: 12px;
+}
+
+.outtime{
+  text-align: right;
+}
+
+.incog{
+  width: 110px;
+  margin: auto;
+  height: 25px;
+  padding: 0;
+  text-align: center;
+  /* border: 1px solid blue; */
+  margin-top: -40px;
+}
+
+.status_online{
+  color: rgb(0, 177, 53);
 }
 
 @media (max-width: 1120px) {
   .chat-box {
-    height: 390px;
+    height: 1040px;
   }
-  .conteiner-chat-box{
-    width: 100%;
+  .conteiner-chat-box {
     margin-top: -150px;
+  }
+}
+
+@media (max-width: 769px) {
+  .chat-box {
+    height: 700px;
+  }
+}
+
+
+@media (max-width: 414px) {
+  .conteiner-chat-box {
+    width: 100%;
+    /* border: 1px solid blue; */
+  }
+  .chat-box {
+    height: 420px;
+  }
+  .wrapper{
+    /* border: 1px solid green; */
+    width: 100%;
+    padding: 0;
+    margin: 0;
   }
 }
 
 
 
+@media (max-width: 411px) {
+  .chat-box {
+    height: 500px;
+  }
+}
+
+@media (max-width: 376px) and (max-height: 667px){
+  .chat-box {
+    height: 350px;
+  }
+}
+
+@media (max-width: 360px) {
+  .chat-box {
+    height: 330px;
+  }
+}
 
 
-
-
-
+@media (max-width: 320px) {
+  .chat-box {
+    height: 280px;
+  }
+}
