--- a/css/stylo-nav.css
+++ b/css/stylo-nav.css
@@ -449,7 +449,7 @@
 
 @media (max-width: 486px) {
   #logo2 {
-    margin-left: -40px;
+    margin-left: 0px;
   }
   .search {
     margin-left: -50px;
@@ -461,7 +461,7 @@
 
 @media (max-width: 389px) {
   #logo2 {
-    margin-left: -40px;
+    margin-left: -10px;
   }
   .search input {
     width: 130px;
@@ -476,7 +476,20 @@
 
 @media (max-width: 363px) {
   #logo2 {
-    margin-left: -40px;
+    margin-left: -20px;
+  }
+  .search {
+    margin-left: -60px;
+  }
+  .menu-btn {
+    margin-left: -20px;
+  }
+}
+
+@media (max-width: 323px) {
+  #logo2 {
+    height: 100px;
+    margin-left: -5px;
   }
   .search {
     margin-left: -60px;
