--- a/css/stylo-nav.css
+++ b/css/stylo-nav.css
@@ -6,7 +6,7 @@
 }
 
 .barra-inicio-new {
-  background: red;
+  background: black;
   /* position: fixed; */
   /* border: 1px solid rgb(0, 204, 51); */
 }
@@ -35,6 +35,7 @@
 
 .nav-main li {
   padding: 10px;
+  
 }
 
 .cir-num-mjs {
@@ -397,7 +398,7 @@
   }
 
   .barra-inicio-new {
-    height: 200px;
+    height: 150px;
   }
   .nav-main {
     height: 200px;
