--- a/css/stylo-historys.css
+++ b/css/stylo-historys.css
@@ -61,7 +61,7 @@
   margin-top: -29%;
   border-radius: 50%;
   background-color: red;
-  position: relative;
+  /* position: relative; */
   cursor: pointer;
 }
 
