--- a/css/stylo-message-page.css
+++ b/css/stylo-message-page.css
@@ -3,27 +3,28 @@
   background: red;
   margin: auto;
   border-radius: 7px;
+  /* border: 1px solid black; */
   /* height: auto; */
 }
 
-.users-lista{
-  /* border: 1px solid black; */
+.users-lista {
   width: 90%;
+  /* border: 1px solid black; */
   /* height: 500px; */
   margin: auto;
 }
 
-.mgs_pgas{
+.mgs_pgas {
   margin-left: 40px;
   margin-top: -10px;
   /* margin-right: auto; */
 }
 
-.nochat{
+.nochat {
   text-align: center;
 }
 
-.img_mgs{
+.img_mgs {
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -33,7 +34,7 @@
 
 .conteiner-messaje-secrete {
   width: 700px;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   background: black;
   margin: auto;
   border-radius: 7px;
@@ -49,11 +50,13 @@
   width: 90%;
   height: 100px;
   border: 1px sold rgb(245, 13, 13);
+  /* border: 1px solid black; */
+
   background: white;
   /* margin-left: 10px; */
   margin: auto;
   padding: 10px;
-  border-radius: 30px 30px 0 30px ;
+  border-radius: 30px 30px 0 30px;
   margin-bottom: 5px;
 }
 
@@ -65,7 +68,7 @@
   /* margin-left: 10px; */
   margin: auto;
   padding: 10px;
-  border-radius: 0 30px 30px 30px ;
+  border-radius: 0 30px 30px 30px;
   margin-bottom: 5px;
 }
 
@@ -92,11 +95,21 @@
   .message-box-page {
     width: 300px;
   }
+  .message-box-page-me {
+    width: 100%;
+  }
+  .message-box-page-nome {
+    width: 100%;
+  }
+  .users-lista {
+    width: 98%;
+  }
 }
 
 @media (max-width: 451px) {
   .conteiner-messaje {
-    width: 300px;
+    width: 390px;
+    margin-left: -18px;
   }
   .conteiner-messaje-secrete {
     width: 300px;
@@ -106,9 +119,27 @@
   }
 }
 
+@media (max-width: 415px) {
+  .conteiner-messaje {
+    width: 410px;
+  }
+}
+
+@media (max-width: 412px) {
+  .conteiner-messaje {
+    width: 405px;
+  }
+}
+
+@media (max-width: 376px) {
+  .conteiner-messaje {
+    width: 373px;
+  }
+}
+
 @media (max-width: 320px) {
   .conteiner-messaje {
-    width: 200px;
+    width: 322px;
   }
   .conteiner-messaje-secrete {
     width: 200px;
