--- a/css/stylo-publ.css
+++ b/css/stylo-publ.css
@@ -178,12 +178,13 @@
 
 .model-coment-view{
   width: 100%;
-  border: 1px solid black;
-  color: grey;
+  border: 1px solid rgb(240, 240, 240);
+  background-color: rgb(240, 240, 240);
+  color: black;
   border-radius: 15px;
   padding: 10px;
   padding-bottom: 0;
-  margin-bottom: 5px;
+  margin-bottom: 3px;
 }
 
 .estado_lettle{
