--- a/css/stylo-nav.css
+++ b/css/stylo-nav.css
@@ -2,13 +2,10 @@
   width: 100%;
   position: fixed;
   top: 0;
-  /* border: 1px solid rgb(0, 14, 204); */
 }
 
 .barra-inicio-new {
   background: red;
-  /* position: fixed; */
-  /* border: 1px solid rgb(0, 204, 51); */
 }
 
 .nav-main {
@@ -16,7 +13,6 @@
   margin: auto;
   font-size: 17px;
   display: flex;
-  /* border: 1px solid black; */
   align-items: center;
   height: 60px;
 }
@@ -26,7 +22,6 @@
   display: flex;
   list-style: none;
   justify-content: space-between;
-  /* border: 1px solid rgb(7, 173, 7); */
   margin: auto;
   height: 60px;
   align-items: center;
@@ -78,7 +73,6 @@
 
 #logo2 {
   display: none;
-  /* border: 1px solid purple; */
 }
 
 /* buscar */
@@ -98,7 +92,6 @@
   font-size: 15px;
   padding: 5px;
   border-radius: 5px;
-  /* background-color:  #06f039; */
 }
 
 #search-boton:hover {
@@ -106,10 +99,6 @@
 }
 
 .img-barra {
-  /* border: 1px solid black; */
-  /* width: 60px;
-    height: 60px;
-    padding: 3px; */
   display: inline-block;
   position: relative;
 }
@@ -129,35 +118,24 @@
 }
 
 .message-btn {
-  /* position: absolute; */
   cursor: pointer;
-  /* font-size: 2rem; */
-  /* color: #0A1949; */
-  /* display: none; */
-  /* margin-top: 15px; */
-  /* padding: 5px; */
 }
 
-/* carrito */
 #icon-logo {
   width: 40px;
   height: 40px;
 }
 
-/* #icon-logo{ */
-/* display: none; */
-/* } */
+
 
 .bar-main-rigth ul.bar-menu-rigth {
   display: none;
   position: absolute;
-  /* position: relative; */
   right: 0;
   background-color: red;
   height: 550px;
   padding: 30px;
   opacity: 0.9;
-  /* font-family: 'Oswald', sans-serif; */
   margin-top: 62px;
 }
 
@@ -168,13 +146,11 @@
 .bar-main-rigth ul.bar-menu-rigth {
   display: block;
   transform: translateX(400px);
-  /* transform: translateY(-10px); */
   transition: 0.5s ease-in-out;
 }
 
 .bar-main-rigth ul.bar-menu-rigth.show {
   transform: translateX(0);
-  /* transform: translateY(-10px); */
 }
 
 .bar-menu-rigth {
@@ -212,9 +188,7 @@
   background: white;
   border-radius: 7px;
   padding: 5px;
-  /* border: 1px solid black; */
   margin-bottom: 3px;
-  /* cursor: pointer; */
 }
 
 .message-box-nav a {
@@ -242,7 +216,6 @@
   margin-top: 120px;
   display: none;
   cursor: pointer;
-  /* border: 1px solid green; */
 }
 
 .menu-btn i {
@@ -259,8 +232,6 @@
   padding: 30px;
   opacity: 0.9;
   font-family: "Oswald", sans-serif;
-  /* z-index: 10000; */
-  /* transform: translateY(50px); */
 }
 
 .foto-bar {
@@ -281,7 +252,6 @@
 }
 
 .bar-menu li:hover {
-  /* border-bottom: 2px solid red; */
 }
 
 .bar-menu img {
@@ -291,32 +261,25 @@
 }
 
 .search-button-two {
-  /* width: 40%; */
   margin-top: 120px;
   display: none;
   cursor: pointer;
-  /* border: 1px solid green; */
-  /* margin-right: 50px; */
 }
 
 .search-button-two i {
   font-size: 30px;
 }
 
-/* seach para moviles */
+/* para mobilles */
 .search {
   margin: 20px 0;
   display: flex;
-  /* position: relative; */
   align-items: center;
   justify-content: space-between;
-  /* border: 1px solid rgb(40, 6, 189); */
 }
 
 .search input {
-  /* position: absolute; */
   height: 42px;
-  /* width: calc(100% - 50px); */
   border: 1px solid #ccc;
   padding: 0 13px;
   font-size: 16px;
