©Aycoro 2021 Version 1.2.1 FullStar

--- a/css/stylo-main.css
+++ b/css/stylo-main.css
@@ -12,6 +12,11 @@
 .footer label{
     color: black;
     cursor: pointer;
+    font-size: 13px;
+}
+
+.footer span{
+    font-size: 13px;
 }
 
 .contein-editor{
