--- a/css/stylo-dm.css
+++ b/css/stylo-dm.css
@@ -462,7 +462,7 @@ form .name-details .field:last-child {
     height: 1040px;
   }
   .conteiner-chat-box {
-    margin-top: -150px;
+    margin-top: -130px;
   }
 }
 
@@ -489,11 +489,15 @@ form .name-details .field:last-child {
   }
 }
 
-
+@media (max-width: 411px) and (max-height: 823px){
+  .chat-box {
+    height: 500px;
+  }
+}
 
 @media (max-width: 411px) {
   .chat-box {
-    height: 500px;
+    height: 430px;
   }
 }
 
