--- a/css/stylo-index.css
+++ b/css/stylo-index.css
@@ -15,8 +15,8 @@
 }
 
 .btn-box-post{
-    width: 48px;
-    height: 48px;
+    width: 38px;
+    height: 38px;
     background: red;
     border-radius: 5px;
     margin-left: 2px;
@@ -42,11 +42,11 @@
 }
 
 .plus-post-btn i{
-    margin: auto;
-    font-size: 40px;
+    font-size: 30px;
     cursor: pointer;
     color: white;
-    
+    margin-top: -2px;
+    margin-left: 5px;
     
 }
 
