--- a/css/stylo-nav.css
+++ b/css/stylo-nav.css
@@ -126,13 +126,11 @@
   height: 40px;
 }
 
-
-
 .bar-main-rigth ul.bar-menu-rigth {
   display: none;
   position: absolute;
   right: 0;
-  background-color: red;
+  background-color: rgb(240, 240, 240);
   height: 550px;
   padding: 30px;
   opacity: 0.9;
@@ -360,13 +358,14 @@
   }
 
   .barra-inicio-new {
-    height: 200px;
+    height: 140px;
   }
   .nav-main {
-    height: 200px;
+    height: 140px;
   }
   .container-one {
-    height: 200px;
+    margin-top: -40px;
+    height: 140px;
   }
   .menu-btn {
     display: block;
@@ -459,5 +458,12 @@
   }
   .menu-btn {
     margin-left: -20px;
+  }
+}
+
+
+@media (max-width: 414px) {
+  .conteiner {
+    width: 100%;
   }
 }
