--- a/css/stylo-dm.css
+++ b/css/stylo-dm.css
@@ -345,7 +345,7 @@ form .name-details .field:last-child {
 }
 
 .chat-box .chat {
-  margin: 15px 0;
+  margin: 5px 0;
 }
 
 .chat-box .chat p {
@@ -361,6 +361,7 @@ form .name-details .field:last-child {
 .outgoing .details {
   margin-left: auto;
   max-width: calc(100% - 130px);
+  margin-bottom: -15px;
 }
 
 .outgoing .details p {
@@ -385,7 +386,6 @@ form .name-details .field:last-child {
 }
 
 .incoming .details {
-  /* border: 1px solid green; */
   margin-left: 10px;
   margin-right: auto;
   max-width: calc(100% - 130px);
@@ -449,7 +449,7 @@ form .name-details .field:last-child {
   height: 25px;
   padding: 0;
   text-align: center;
-  /* border: 1px solid blue; */
+  border: 1px solid blue;
   margin-top: -40px;
 }
 
@@ -470,13 +470,16 @@ form .name-details .field:last-child {
 }
 
 
+
 @media (max-width: 414px) {
   .conteiner-chat-box {
     width: 100%;
+    margin-top: 0;
     /* border: 1px solid blue; */
   }
   .chat-box {
-    height: 420px;
+    width: 100%;
+    height: 500px;
   }
   .wrapper{
     /* border: 1px solid green; */
@@ -488,25 +491,25 @@ form .name-details .field:last-child {
 
 @media (max-width: 411px) and (max-height: 823px){
   .chat-box {
-    height: 500px;
+    height: 700px;
   }
 }
 
 @media (max-width: 411px) {
   .chat-box {
-    height: 430px;
+    height: 560px;
   }
 }
 
 @media (max-width: 376px) and (max-height: 667px){
   .chat-box {
-    height: 300px;
+    height: 400px;
   }
 }
 
 @media (max-width: 360px) {
   .chat-box {
-    height: 330px;
+    height: 430px;
   }
 }
 
