--- a/css/stylo-busqueda.css
+++ b/css/stylo-busqueda.css
@@ -1,95 +1,86 @@
-.search-perfiles{
-    margin-top: 100px;
+/* search nav */
+
+.conteiner_search {
+  width: 100%;
+  margin-top: 0;
+  position: absolute;
+  display: none;
 }
 
-.search-perfiles h1{
-    text-align: center;
+.conteiner_search.show {
+  display: block;
+}
+
+.conteiner_search_box {
+  width: 40%;
+  margin: auto;
+  height: 500px;
+  border: 5px solid rgb(240, 240, 240);
+  border-radius: 5px;
+  background-color: rgb(240, 240, 240);
+  overflow: auto;
+  margin-top: 10px;
+}
+
+.conteiner_search_box::-webkit-scrollbar {
+  /* width: 7px; */
+  /* background-color: rgb(122, 122, 122);
+  border-radius: 5px;
+  height: 50%; */
 }
 
 
-
-.search-perfil-box{
-    border: 3px solid black;
-    height: 100px;
-    width: 100px;
-    border-radius: 60%;
-    margin: auto;
+.search_conteiner_box {
+  width: 90%;
+  margin: auto;
+  /* border: 1px solid rgb(170, 170, 170); */
+  display: flex;
+  margin-top: 5px;
+  border-radius: 5px;
+  background-color: rgb(255, 255, 255);
 }
 
+.nameAndUserSeach {
+  height: 50px;
+  margin-top: auto;
+}
 
-.search-perfil-box img{
+.img_search_box {
+  width: 60px;
+  height: 60px;
+}
+
+.img_search_box img {
+  padding: 10px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center;
+  border-radius: 50%;
+}
+
+.NoFoundSearch{
+  text-align: center;
+}
+
+.conteiner-nav-two.hidde{
+  display: none;
+}
+
+@media (max-width: 1030px) {
+  .conteiner_search_box {
+    width: 60%;
+  }
+}
+
+@media (max-width: 752px) {
+  .conteiner_search_box {
+    width: 80%;
+  }
+}
+
+@media (max-width: 530px) {
+  .conteiner_search_box {
     width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    object-fit: cover;
-    object-position: center center;
+  }
 }
-
-.info-busque{
-    width: 230px;
-
-}
-
-.user-info-busque{
-    margin: auto;
-    text-align: center;
-}
-
-.search-perfiles a{
-    text-decoration: none;
-}
-
-.display{
-    width: 100%;
-    display: grid;
-    justify-content: space-around;
-    grid-template-columns: auto auto auto auto auto;
-}
-
-
-
-
-
-
-@media (max-width: 1264px) {
-    .display{
-        grid-template-columns: auto auto auto auto;
-    }
-}
-
-@media (max-width: 1006px) {
-    .display{
-        grid-template-columns: auto auto auto;
-    }
-}
-
-@media (max-width: 736px) {
-    .display{
-        grid-template-columns: auto auto;
-    }
-}
-
-@media (max-width: 500px) {
-    .info-busque{
-        width: 200px;
-    
-    }
-}
-
-
-@media (max-width: 375px) {
-    .info-busque{
-        width: 180px;
-    
-    }
-}
-
-
-@media (max-width: 360px) {
-    .info-busque{
-        width: 150px;
-    
-    }
-}
-
-
