--- a/css/stylo-nav.css
+++ b/css/stylo-nav.css
@@ -63,6 +63,9 @@
   margin-top: 0;
 }
 
+.conteinner_logo{
+}
+
 .link-index {
   border-bottom: red;
 }
@@ -75,27 +78,7 @@
   display: none;
 }
 
-/* buscar */
-#search-box {
-  width: 400px;
-  font-size: 15px;
-  padding: 5px;
-  border-radius: 5px;
-}
-
-#search-box:hover {
-  border: 2px solid black;
-}
-
-#search-boton {
-  width: 80px;
-  font-size: 15px;
-  padding: 5px;
-  border-radius: 5px;
-}
-
-#search-boton:hover {
-  border: 2px solid black;
+.conteier_perfil_img{
 }
 
 .img-barra {
@@ -210,6 +193,9 @@
   color: white;
 }
 
+.conteiner_buton_menu{
+}
+
 .menu-btn {
   margin-top: 120px;
   display: none;
@@ -258,9 +244,18 @@
   border-radius: 50px;
 }
 
+
+
+/* para mobilles */
+.search {
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+
 .search-button-two {
-  margin-top: 120px;
-  display: none;
   cursor: pointer;
 }
 
@@ -268,16 +263,9 @@
   font-size: 30px;
 }
 
-/* para mobilles */
-.search {
-  margin: 20px 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
 .search input {
   height: 42px;
+  width: 500px;
   border: 1px solid #ccc;
   padding: 0 13px;
   font-size: 16px;
@@ -334,7 +322,7 @@
     display: none;
   }
 
-  .img-barra {
+  .conteier_perfil_img {
     display: none;
   }
 
@@ -371,7 +359,25 @@
     display: block;
   }
   .search-button-two {
-    display: block;
+    margin-top: 120px;
+  }
+}
+
+@media (max-width: 860px) {
+  .search input {
+    width: 400px;
+  }
+}
+
+@media (max-width: 760px) {
+  .search input {
+    width: 300px;
+  }
+}
+
+@media (max-width: 660px) {
+  .search input {
+    width: 200px;
   }
 }
 
@@ -381,9 +387,9 @@
   }
 }
 
-@media (max-width: 564px) {
-  .nav-main ul {
-    justify-content: space-around;
+@media (max-width: 560px) {
+  .search input {
+    width: 170px;
   }
 }
 
@@ -391,20 +397,11 @@
   .search input {
     width: 150px;
   }
-  .search {
-    margin-left: -200px;
-  }
-  .menu-btn {
-    margin-left: -50px;
-  }
 }
 
 @media (max-width: 486px) {
-  .search {
-    margin-left: -50px;
-  }
-  .menu-btn {
-    margin-left: 10px;
+  .search input {
+    width: 140px;
   }
 }
 
@@ -412,32 +409,7 @@
   .search input {
     width: 130px;
   }
-  .search {
-    margin-left: -50px;
-  }
-  .menu-btn {
-    margin-left: -10px;
-  }
 }
-
-@media (max-width: 363px) {
-  .search {
-    margin-left: -60px;
-  }
-  .menu-btn {
-    margin-left: -20px;
-  }
-}
-
-@media (max-width: 323px) {
-  .search {
-    margin-left: -60px;
-  }
-  .menu-btn {
-    margin-left: -20px;
-  }
-}
-
 
 @media (max-width: 414px) {
   .conteiner {
