--- a/css/stylo-login.css
+++ b/css/stylo-login.css
@@ -1,31 +1,103 @@
-.conteiner-login{
-    background: red;
-    width: 350px;
-    margin: auto;
-    border-radius: 7px;
+.conteiner-login {
+  background: red;
+  width: 350px;
+  margin: auto;
+  border-radius: 7px;
 }
-.formu-box{
-    width: 90%;
-    margin: auto;
-}
-
-
-.con-box h2{
-    color: rgb(0, 0, 0);
+.formu-box {
+  width: 90%;
+  margin: auto;
 }
 
-.form-group label{
-    color: rgb(0, 0, 0);
+.logo_login {
+  width: 100px;
+  height: 100px;
+  margin: auto;
 }
 
-.links-log a{
-    color: rgb(0, 0, 0);
+.logo_login img {
+  width: 100%;
+  height: 100%;
 }
 
-.conteiner-login.hidde{
+.con-box h2 {
+  color: rgb(0, 0, 0);
+}
+
+.form-group label {
+  color: rgb(0, 0, 0);
+}
+
+.links-log a {
+  color: rgb(0, 0, 0);
+}
+
+.conteiner-login.hidde {
+  display: none;
+}
+
+.button-log {
+  width: 100%;
+}
+
+.footer_login {
+  width: 500px;
+  margin: auto;
+  text-align: center;
+}
+
+.footer_login ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+}
+
+.footer_login ul li {
+  margin-right: 10px;
+  font-size: 12px;
+  text-align: center;
+  margin: auto;
+}
+
+.link_password{
+  font-size: 13px;
+  text-decoration: none;
+  color: white;
+}
+
+.link_password:hover{
+  color: white;
+}
+
+.copy-version {
+  color: gray;
+  font-size: 12px;
+}
+
+#ul2 {
+  display: none;
+}
+#ul3 {
+  display: none;
+}
+
+.footer_login.hidde{
     display: none;
 }
 
-.button-log{
-    width: 100%;
+@media (max-width: 600px) {
+  .footer_login {
+    width: 300px;
+  }
+  #ul1 {
+    display: none;
+  }
+  #ul2 {
+    display: flex;
+    margin-bottom: 0;
+  }
+  #ul3 {
+    display: flex;
+    margin-top: 0;
+  }
 }
