©Aycoro 2022 Version 1.7.0 FullStar

--- a/css/stylo-charger.css
+++ b/css/stylo-charger.css
@@ -21,7 +21,7 @@
 
 #carga {
   border: 15px solid #ccc;
-  border-top-color: #f4266a;
+  border-top-color: #fd0000;
   border-top-style: groove;
   height: 100px;
   width: 100px;
