--- a/css/stylo-publ.css
+++ b/css/stylo-publ.css
@@ -1,19 +1,60 @@
 .publicacion {
   width: 500px;
   margin: auto;
-  margin-bottom: 50px;
-  border-bottom: 1px solid black;
+  margin-top: 10px;
 }
+
+.post_head{
+  width: 100%;
+  margin: auto;
+  display: flex;
+}
+
+.profile_photo_post_box{
+  width: 10%;
+  /* border: 1px solid red; */
+}
+
+.photobox_post{
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  /* margin: auto; */
+}
+
+.photobox_post img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center;
+  border-radius: 100%;
+}
+
+.name_text_post_container{
+  /* border: 1px solid rgb(51, 255, 0); */
+  width: 70%;
+}
+
+.setting_post_container{
+  /* border: 1px solid rgb(255, 0, 234); */
+  width: 20%;
+}
+
+
+.text_post{
+  width: 98%;
+  /* border: 1px solid rgb(0, 81, 255); */
+}
+
+.text_post span{
+  word-wrap: break-word;
+} 
 
 
 .pub-img-box {
   width: 500px;
   height: 500px;
   margin: auto;
-}
-
-.fecha{
-  font-size: 10px;
 }
 
 .pub-img-box img {
@@ -26,42 +67,74 @@
 .piecera {
   width: 500px;
   margin: auto;
-}
-
-.like{
-  width: 100px;
-}
-
-.like-wait {
-  font-size: 40px;
-  cursor: pointer;
-}
-
-.like-red {
-  font-size: 40px;
-  cursor: pointer;
-  color: red;
+  /* border: 1px solid blue; */
 }
 
 .display-form{
   display: flex;
 }
 
+.fecha{
+  font-size: 10px;
+}
+
+
+.like{
+  width: 50px;
+}
+
+.like-heart {
+  font-size: 40px;
+  cursor: pointer;
+  color: rgb(146, 146, 146);
+}
+
+.like-heart.red {
+  color: red;
+}
+
+.red {
+  color: red;
+}
+
+.cantoflikes{
+  width: 150px;
+  /* border: 1px solid purple; */
+  margin-left: 5px;
+  /* text-align: center; */
+}
+
+.coment_sp{
+  margin-bottom: 10px;
+}
+
 .coment-box{
   width: 50px;
+}
+
+.date-box{
+  width: 400px;
+  /* border: 1px solid orangered; */
+}
+
+.date-box-container{
+  /* border: 1px solid rgb(0, 156, 96); */
+  width: 100px;
+  float: right;
 }
 
 .publicacion-text {
   width: 500px;
   margin: auto;
   margin-bottom: 50px;
-  border-bottom: 1px solid black;
+  /* border-bottom: 1px solid black; */
   
 }
 
 .conment-icon{
   font-size: 40px;
   cursor: pointer;
+  color: rgb(146, 146, 146);
 }
 
 .name_and_date_post{
@@ -91,8 +164,10 @@
   height: 25px;
   align-items: center;
   cursor: pointer;
-  margin-left: 93%;
-  margin-top: -44px;
+  /* margin-left: 93%;
+  margin-top: -44px; */
+  /* border: 1px solid rgb(177, 5, 134); */
+  float: right;
 }
 
 .box_setting{
@@ -103,8 +178,14 @@
 
 .options-edit-post_space{
   width: 95px;
-  margin-top: 15px;
-  margin-left: 75%;
+  margin-top: 25px;
+  /* margin-left: 75%; */
+  display: none;
+}
+
+
+.show{
+  display: block;
 }
 
 .options-edit-post{
@@ -157,11 +238,17 @@
 .coment_add_box{
   width: 100%;
   margin-bottom: 10px;
+  display: none;
+}
+
+.coment_add_box.show{
+  display: block;
 }
 
 .coment_add_input{
   width: 85%;
 }
+
 
 .coment_add_box_center{
   width: 100%;
@@ -172,6 +259,11 @@
   width: 90%;
   margin: auto;
   font-size: 15px;
+  display: none;
+}
+
+.coment-text-box.show{
+  display: block;
 }
 
 .model-coment-view{
@@ -243,6 +335,18 @@
   }
 }
 
+@media (max-width: 700px) {
+  .profile_photo_post_box{
+    width: 15%;
+  }
+  .name_text_post_container{
+    width: 65%;
+  }
+  .date-box-container{
+    width: 130px;
+  }
+}
+
 @media (max-width: 556px) {
   .publicacion {
     width: 400px;
@@ -283,3 +387,68 @@
   }
 }
 
+
+
+
+
+/* charger */
+
+*,
+*:after,
+*:before {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+#charger_conteiner {
+  background-color: rgba(250, 240, 245, 0.9);
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  -webkit-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  transition: all 1s ease;
+  z-index: 10000;
+}
+
+#cargador {
+  border: 5px solid #ccc;
+  border-top-color: #fd0000;
+  border-top-style: groove;
+  height: 25px;
+  width: 25px;
+  border-radius: 100%;
+
+  position: fixed;
+  top: 1;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+
+  -webkit-animation: girar 0.5s linear infinite;
+  -o-animation: girar 0.5s linear infinite;
+  animation: girar 0.5s linear infinite;
+}
+
+@keyframes girar {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+
+.charger_post{
+  display: none;
+}
+
+
+.charger_post.watch{
+  display: block;
+}
